# mopidy-youtubemusic

./: .flake8  CHANGELOG.rst  README.rst  pyproject.toml  setup.py
mopidy_youtubemusic/: __init__.py  backend.py  command.py  ext.conf  library.py  playback.py  playlist.py  scrobble_fe.py
mopidy_ytmusic/: backend.py  library.py
tests/: test_extension.py  test_library.py
